--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -610,7 +610,7 @@ https://mamoyz.com/ */
 
 @media (max-width: 1023px) { .advisors .advisor-item .advisor-about h4 { font: normal normal 600 20px/36px Titillium Web; } }
 
-.advisors .advisor-item .advisor-about p { text-align: left; font: normal normal normal 20px/40px Titillium Web; letter-spacing: 0px; color: #7d7d7d; opacity: 1; margin: 0; }
+.advisors .advisor-item .advisor-about p { text-align: left; font: normal normal normal 20px/40px Titillium Web; letter-spacing: 0px; color: #7d7d7d; opacity: 1; margin: 0; margin: 0 0 20px 0; }
 
 @media (max-width: 1023px) { .advisors .advisor-item .advisor-about p { font: normal normal normal 18px/36px Titillium Web; } }
 
@@ -657,7 +657,7 @@ https://mamoyz.com/ */
   .advisors .advisor-item .advisor-about:hover { -webkit-box-shadow: -1.25vw 0.26vw 4.17vw #00000035; box-shadow: -1.25vw 0.26vw 4.17vw #00000035; }
   .advisors .advisor-item .advisor-about h3 { font: normal normal bold 2.19vw/3.33vw Titillium Web; letter-spacing: 1px; }
   .advisors .advisor-item .advisor-about h4 { font: normal normal 600 1.25vw/2.08vw Titillium Web; letter-spacing: 1px; margin: 0.52vw 0; }
-  .advisors .advisor-item .advisor-about p { font: normal normal normal 1.04vw/2.08vw Titillium Web; letter-spacing: 1px; }
+  .advisors .advisor-item .advisor-about p { font: normal normal normal 1.04vw/2.08vw Titillium Web; letter-spacing: 1px; margin: 0 0 1vw 0; }
   .advisors .advisor-item .advisor-about .read-more { font: normal normal bold 1.04vw/1.61vw Titillium Web; letter-spacing: 1px; border-bottom: 0.1vw solid #c3a7e8; margin-top: 2.6vw; }
   .advisors .advisor-item .advisor-about .read-more span { margin-left: 0.26vw; }
   .advisors .current-advisor .advisor-item { width: 62.5vw; max-width: 62.5vw; -webkit-transform: translate(0, 5.21vw); transform: translate(0, 5.21vw); }
